# frontend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  jest.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
.github/workflows/: ci.yml
agent/: .dockerignore  Dockerfile  langgraph.json  main.py  pyproject.toml  register_prompt.py
agent/sample_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: MLFLOW_SETUP.md  configuration.md
scripts/: register-mlflow-prompt.sh  setup-agent.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/copilotkit/: route.ts
src/app/api/log-feedback/: route.ts
src/components/: console-filter.tsx  feedback-card.tsx
tests/: playwright.config.ts
tests/e2e/: agent-integration.spec.ts  chat-alignment.spec.ts  ui-flow.spec.ts
tests/e2e/fixtures/: copilotkit-mock.ts
tests/unit/: ChatContent.test.tsx
