[project]
name = "sample-agent"
version = "0.1.0"
description = "A LangGraph agent"
requires-python = ">=3.12"
dependencies = [
    "langchain==1.2.0",
    "langgraph==1.0.5",
    "langsmith>=0.4.49",
    "anthropic[vertex]>=0.40.0,<1.0.0",
    "fastapi>=0.115.5,<1.0.0",
    "uvicorn>=0.29.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "langgraph-cli[inmem]>=0.4.11",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "copilotkit>=0.1.74",
    "langgraph-api>=0.6.0",
    "langchain-mcp-adapters>=0.1.0,<0.2.0",
    "mcp>=1.0.0",
    # Neo4j integration
    "neo4j>=5.0.0",
    "langchain-neo4j>=0.1.0",
    "langchain-google-vertexai>=3.2.2",
]
